Build results of f41d662 (on master)

--- a/dist.ini
+++ b/dist.ini
@@ -29,7 +29,7 @@ untracked_files = warn     ; default value (can also be "warn" or "ignore")
 
 [PodSyntaxTests]
 
-[PodCoverageTests]
+;[PodCoverageTests]
 
 ;[Test::Perl::Critic]
 
