--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.008, CPAN::Meta::Converter version 2.132661'
+generated_by: 'Dist::Zilla version 5.008, CPAN::Meta::Converter version 2.143240'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,6 +20,7 @@ requires:
   Expect: 0
   Getopt::Long: 0
   Git::Repository: 0
+  LWP::Protocol::https: 0
   LWP::UserAgent: 0
   Mouse: 0
   Mouse::Role: 0
@@ -34,4 +35,4 @@ resources:
   bugtracker: https://github.com/norbu09/Giovanni/issues
   homepage: https://github.com/norbu09/Giovanni/wiki
   repository: git://github.com/norbu09/Giovanni.git
-version: 1.10
+version: 1.11
